--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
+    "@radix-ui/react-form": "^0.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.15",
     "immer": "^10.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
