--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "immer": "^10.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
     "tailwind-variants": "^2.1.0",
     "zustand": "^5.0.8"
   },
