--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch --env-file .env src/infra/http/server.ts",
-    "build": "tsc",
+    "build": "tsup-node",
     "start": "node dist/infra/http/server.js",
     "test": "dotenv -e .env.test vitest run",
     "test:watch": "vitest",
@@ -38,6 +38,7 @@
     "@types/node": "^24.2.0",
     "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.4",
+    "tsup": "^8.3.5",
     "typescript": "^5.9.2",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
